--- a/searchhub-server/pom.xml
+++ b/searchhub-server/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>com.youyi</groupId>
-    <artifactId>searchhub</artifactId>
+    <artifactId>searchhub-server</artifactId>
     <version>0.0.1</version>
 
     <properties>
