--- a/searchhub-server/src/main/resources/application-dev.yml
+++ b/searchhub-server/src/main/resources/application-dev.yml
@@ -17,4 +17,4 @@ mybatis-plus:
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-    map-underscore-to-camel-case: false
+    map-underscore-to-camel-case: true
