--- a/searchhub-server/pom.xml
+++ b/searchhub-server/pom.xml
@@ -43,6 +43,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-aop</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+    </dependency>
 
     <!--mybatis && mybatis-plus -->
     <dependency>
@@ -55,7 +59,6 @@
       <artifactId>mybatis-plus-boot-starter</artifactId>
       <version>${mybatis.plus.spring.version}</version>
     </dependency>
-
 
     <!--datasource-->
     <dependency>
