feat(retry): support retry when send http request

--- a/searchhub-server/pom.xml
+++ b/searchhub-server/pom.xml
@@ -102,6 +102,11 @@
       <artifactId>jsoup</artifactId>
       <version>${jsoup.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>33.1.0-jre</version>
+    </dependency>
 
   </dependencies>
 
